[Payments] Blink: only perform shipping option validation if requestShipping

Previously would always validate amounts regardless of requestShipping value.
Now only validates when shipping is requested by the API user.

Bug: 766170
Test: blink_tests
Change-Id: I2d1138951e1fa284f36b9fd974857e4f17e7c970
Reviewed-on: https://chromium-review.googlesource.com/671109
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502655}
Former-commit-id: cd2bd69261deb7d12900c1a18c605d9ab3a380cb